Prevent layout overflow on img.shields.io API outage

--- a/src/styles/title-menu.scss
+++ b/src/styles/title-menu.scss
@@ -146,11 +146,9 @@
 		}
 
 		.infos {
+			min-width: 0;
 			.header {
-				display: flex;
-				flex-wrap: wrap;
-				gap: 8px;
-				margin-bottom: 1em;
+				overflow: auto;
 
 				.version {
 					display: flex;
@@ -163,6 +161,7 @@
 				display: flex;
 				flex-direction: column;
 				gap: 8px;
+				margin-top: 1em;
 				margin-inline: 8px;
 				text-wrap: pretty;
 
